--- a/Stockers/app/src/main/res/layout/activity_main.xml
+++ b/Stockers/app/src/main/res/layout/activity_main.xml
@@ -25,16 +25,6 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="24dp">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/BottomToolBar"
-        android:translationZ="10dp">
-
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -189,6 +179,7 @@
                 android:layout_height="58dp"
                 android:layout_weight="1"
                 android:clickable="true"
+                android:onClick="stockQuoteClick"
                 android:src="@drawable/ic_launcher_foreground_search" />
 
             <ImageView
