--- a/Stockers/app/src/main/res/layout/activity_new_note.xml
+++ b/Stockers/app/src/main/res/layout/activity_new_note.xml
@@ -25,7 +25,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@android:color/holo_red_light"
+            android:background="@color/textColor"
             android:text="@string/button_delete"
             android:textColor="@color/buttonLabel" />
 
