--- a/Stockers/app/src/main/res/layout/recyclerview_note_item.xml
+++ b/Stockers/app/src/main/res/layout/recyclerview_note_item.xml
@@ -7,5 +7,7 @@
         android:id="@+id/textView"
         style="@style/word_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        />
+
 </LinearLayout>
