--- a/Stockers/app/src/main/res/layout/activity_new_note.xml
+++ b/Stockers/app/src/main/res/layout/activity_new_note.xml
@@ -42,6 +42,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-light"
             android:hint="@string/hint_word"
+            android:textColorHint="@android:color/darker_gray"
             android:inputType="textMultiLine"
             android:padding="@dimen/small_padding"
             android:layout_marginBottom="@dimen/big_padding"
