--- a/Stockers/app/src/main/res/layout/activity_main.xml
+++ b/Stockers/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="240dp"
+                android:layout_height="200dp"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -170,8 +170,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="10dp">
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/stockQuotesBtn"
