--- a/Stockers/app/src/main/res/layout/activity_about.xml
+++ b/Stockers/app/src/main/res/layout/activity_about.xml
@@ -65,15 +65,16 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/john"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:onClick="showMoreInfo"
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/john"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
+                        android:clickable="true"
+                        android:onClick="showMoreInfo"
                         android:src="@drawable/john" />
 
                     <LinearLayout
@@ -96,16 +97,17 @@
                 </LinearLayout> <!-- end john layout -->
 
                 <LinearLayout
-                    android:id="@+id/lara"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:onClick="showMoreInfo"
                     android:orientation="horizontal"
                     android:paddingTop="5dp">
 
                     <ImageView
+                        android:id="@+id/lara"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
+                        android:clickable="true"
+                        android:onClick="showMoreInfo"
                         android:src="@drawable/lara" />
 
                     <LinearLayout
@@ -128,16 +130,17 @@
                 </LinearLayout> <!-- end lara layout -->
 
                 <LinearLayout
-                    android:id="@+id/nick"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:onClick="showMoreInfo"
                     android:orientation="horizontal"
                     android:paddingTop="5dp">
 
                     <ImageView
+                        android:id="@+id/nick"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
+                        android:clickable="true"
+                        android:onClick="showMoreInfo"
                         android:src="@drawable/nick" />
 
                     <LinearLayout
@@ -160,16 +163,17 @@
                 </LinearLayout> <!-- end nicholas layout -->
 
                 <LinearLayout
-                    android:id="@+id/danny"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:onClick="showMoreInfo"
                     android:orientation="horizontal"
                     android:paddingTop="5dp">
 
                     <ImageView
+                        android:id="@+id/danny"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
+                        android:clickable="true"
+                        android:onClick="showMoreInfo"
                         android:src="@drawable/danny" />
 
                     <LinearLayout
