--- a/Stockers/app/src/main/res/layout/user_stock_layout.xml
+++ b/Stockers/app/src/main/res/layout/user_stock_layout.xml
@@ -2,28 +2,42 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tickerSymbol"/>
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="30dp"
+    android:padding="10dp"
+    android:background="@color/orange"
+    android:translationZ="10dp"
+    android:gravity="center">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
+        android:orientation="vertical"
+        android:layout_gravity="center">
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tickerSymbol"
+            android:textSize="30sp"/>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/quantity"/>
+            android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/purchasePrice"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/quantity"
+                android:layout_marginRight="10dp"
+                android:textSize="20sp"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/purchasePrice"
+                android:textSize="20sp"/>
+
+        </LinearLayout>
     </LinearLayout>
-
 </LinearLayout>
