--- a/Stockers/app/src/main/res/layout/activity_user_stock.xml
+++ b/Stockers/app/src/main/res/layout/activity_user_stock.xml
@@ -10,12 +10,17 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/UserName"/>
+        android:textSize="50sp"
+        android:id="@+id/UserName"
+        android:layout_gravity="center"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/balance" />
+        android:id="@+id/balance"
+        android:layout_gravity="center"
+        android:textSize="30sp"
+        android:layout_marginBottom="20dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
