--- a/Stockers/app/src/main/res/layout/activity_show_stock.xml
+++ b/Stockers/app/src/main/res/layout/activity_show_stock.xml
@@ -40,6 +40,31 @@
             android:id="@+id/stockExchange"
             android:layout_gravity="center" />
 
+            <!-- PHASE2 -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/purple_text_header"
+                android:layout_marginTop="7dp"
+                android:text="@string/buy_displayed_stock"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/quantity"/>
+
+            <!-- to discuss the presentation of the quantity-->
+        </LinearLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/buy"
+            android:onClick="buyStock"/>
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="200dp"
