--- a/Stockers/app/src/main/res/layout/activity_show_stock.xml
+++ b/Stockers/app/src/main/res/layout/activity_show_stock.xml
@@ -14,38 +14,40 @@
         android:orientation="vertical"
         android:layout_gravity="center"
         android:paddingLeft="4dp">
+
         <TextView
+            android:id="@+id/ticker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/ticker"
             style="@style/purple_text_header"
             android:layout_gravity="center"/>
         <!-- actual data -->
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/companyName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center" />
 
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/currentPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center" />
 
         <TextView
+            android:id="@+id/stockExchange"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/stockExchange"
             android:layout_gravity="center" />
 
         <LinearLayout
+            android:id="@+id/buylayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/buylayout"
             android:layout_gravity="center_horizontal"
             android:orientation="vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -65,11 +67,20 @@
                     android:text="@string/quantity" />
 
                 <EditText
+                    android:id="@+id/quantity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="@string/enter_quantity"
                     android:inputType="number"/>
         </LinearLayout>
+
+            <TextView
+                android:id="@+id/currentBalance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:layout_gravity="center_horizontal"/>
+
             <TextView
                 android:id="@+id/maxAmount"
                 android:layout_width="wrap_content"
@@ -83,12 +94,6 @@
                     android:onClick="buyStock"
                     android:layout_gravity="center"/>
         </LinearLayout>
-
-        <!-- todo add text view : max to be calculated -->
-        <!-- todo actually buy the stock and modify the balance-->
-        <!-- todo to show the balance"-->
-
-
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="200dp"
