--- a/Stockers/app/src/main/res/layout/activity_show_stock.xml
+++ b/Stockers/app/src/main/res/layout/activity_show_stock.xml
@@ -16,6 +16,13 @@
         android:paddingLeft="4dp">
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/error"
+            android:textColor="@android:color/holo_red_dark"
+            android:layout_gravity="center_horizontal"
+            android:textSize="20dp"/>
+        <TextView
             android:id="@+id/ticker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
